--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "main": "ramda.js",
   "scripts": {},
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.7",
+    "grunt-mocha": "~0.3.4",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-uglify": "~0.2.2"
+  }
 }
