--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.7",
     "grunt-mocha": "~0.3.4",
-    "grunt-mkdir": "~0.1.0",
+    "grunt-docco": "latest",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.2"
   }
