--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-mocha": "~0.3.4",
     "grunt-docco": "latest",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-mocha-test": "~0.5.0"
   }
 }
