--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "name": "ramda",
   "description": "A practical functional library for Javascript programmers.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "homepage": "https://www.github.com/CrossEye/ramda",
   "license": "MIT",
   "repository": {
@@ -28,5 +28,15 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-mocha-test": "~0.5.0"
+  },
+  "extraDevDependencies -- if we want to use Gulp": {
+    "gulp-rename": "~0.2.1",
+    "gulp-jshint": "~1.3.2",
+    "gulp-uglify": "~0.1.0",
+    "gulp-mocha": "~0.1.0",
+    "gulp-clean": "~0.1.2",
+    "gulp-util": "~2.2.0",
+    "gulp-header": "godaddy/gulp-header",
+    "moment": "~2.5.0"
   }
 }
