--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-docco": "latest",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-mocha-test": "~0.5.0"
+    "grunt-mocha-test": "~0.5.0",
+    "istanbul": "~0.2.0"
   },
   "extraDevDependencies -- if we want to use Gulp": {
     "gulp-rename": "~0.2.1",
