cleanup in docs and curry some stray functions

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "contributors": [
     {
       "name": "buzzdecafe",
-      "email": "m_hur@yahoo.com"
+      "email": "mh@buzzdecafe.com",
+      "web": "http://buzzdecafe.com"
     }
   ],
   "name": "ramda",
