--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-mocha-test": "~0.5.0",
-    "grunt-istanbul": "~0.2.4"
+    "grunt-istanbul": "~0.2.4",
+    "grunt-benchmark": "~0.2.0"
   },
   "extraDevDependencies -- if we want to use Gulp": {
     "gulp-rename": "~0.2.1",
