--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "grunt-docco": "latest",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-mocha-test": "~0.5.0"
+    "grunt-mocha-test": "~0.5.0",
+    "benchmark": "~1.0.0",
+    "lodash": "latest"
   }
 }
