--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-mocha-test": "~0.5.0",
+    "grunt-benchmark": "latest",
     "benchmark": "~1.0.0",
     "lodash": "latest"
   }
