concat for monoids

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "grunt-cli": "~0.1.7",
     "grunt-mocha": "~0.3.4",
     "grunt-docco": "latest",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-mocha-test": "~0.5.0",
-    "grunt-benchmark": "https://github.com/shama/grunt-benchmark/archive/a90d51b0ad0afd0766b4c47621344a3f64ec3384.tar.gz",
+    "grunt-benchmark": "~0.3.0",
     "benchmark": "~1.0.0",
     "lodash": "latest",
+    "orchestrate": "~0.2.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-push-release": "^0.1.1"
