fix broken tests

--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-mocha-test": "~0.5.0",
+    "grunt-readme": "~0.4.5",
     "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
     "benchmark": "~1.0.0",
     "lodash": "latest",
-    "orchestrate": "~0.2.0",
+    "orchestrate": "~0.3.4",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-push-release": "^0.1.1"
