Add support for headless testing using Testem
The test suite can now be run by installing testem globally and running
"testem" (or "testem -l phantomjs" if you have phantomjs installed to run tests
headlessly).

If you don't want to (or cannot) install testem globally, you can run
"./node_modules/bin/testem" instead.

These commits:
- Replace inline require shim with a file
- Add testem and configuration
- Add section to the README describing how to run tests

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-push-release": "^0.1.1",
     "grunt-readme": "^0.4.5",
     "lodash": "latest",
-    "orchestrate": "~0.3.4"
+    "orchestrate": "~0.3.4",
+    "testem": "^0.6.18"
   }
 }
