--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "benchmark": "~1.0.0",
+    "docker": "^0.2.13",
     "grunt": "~0.4.5",
+    "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
     "grunt-cli": "~0.1.13",
-    "grunt-mocha": "~0.4.11",
-    "grunt-docco": "latest",
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.1",
+    "grunt-docco": "latest",
     "grunt-jscs": "~0.7.0",
+    "grunt-jsdoc": "^0.6.0",
+    "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
-    "grunt-readme": "^0.4.5",
-    "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
-    "benchmark": "~1.0.0",
-    "lodash": "latest",
-    "orchestrate": "~0.3.4",
-    "grunt-contrib-copy": "^0.5.0",
     "grunt-push-release": "^0.1.1",
-    "docker": "^0.2.13",
-    "grunt-jsdoc": "^0.6.0"
+    "grunt-readme": "^0.4.5",
+    "lodash": "latest",
+    "orchestrate": "~0.3.4"
   }
 }
