build test/index.html from template

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "main": "ramda.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "make && grunt test"
   },
   "dependencies": {},
   "devDependencies": {
