--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ node_js:
 - '0.10'
 env:
   global:
-    secure: radR/rowNe64+BfZoD/9jH5owfKnjLz1KM2Dns3G7K9vyL9b2pQUJ37wZ8p68iAWj8BS7izn0nBEXzV/W0P2D9iFpaQ1zdZCpwMhfXg7eeAjYaEi5eVSPzZkxPggHdcRZvV0OFj9CTTGbgesqO2vCEPHx0UqOhn40i3td7s+aNk=
-
+    - secure: radR/rowNe64+BfZoD/9jH5owfKnjLz1KM2Dns3G7K9vyL9b2pQUJ37wZ8p68iAWj8BS7izn0nBEXzV/W0P2D9iFpaQ1zdZCpwMhfXg7eeAjYaEi5eVSPzZkxPggHdcRZvV0OFj9CTTGbgesqO2vCEPHx0UqOhn40i3td7s+aNk=
+    - secure: dgshxCQaY6olKOZnD+BT8R1Vp8uJhwCIUlSnoFji1m+7KIy3zwbbgi/2jkf/SWBCxzlpzDBWUuWbaMJOrJHWfjUaX3JfUY+2gbAPunrofD+42+brfo506rIxr20yaoomsnLxXFLgleLW5FuaezP6KP4lW5IOlWZXOEv0vTvoxQk=
+    - secure: RdTqvihsZTytLsHWjhdRiA3W0dIhM1dDW07ow0wbzWb7OMZSnZUKEBm0bMME1ndpt5V0T1iqeNuhCZ7BDwTAKa8+kKoJ+kxjSHzgdTAKa0IRglq/FMJT/kjJ7uYyxX1HPD7q1Y3PzAhM77fXnEE3DzjpgpXUIXplkDIE+A0R3pA=
 before_script:
 - npm install -g grunt-cli
 after_success: 
