--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.1",
@@ -43,6 +44,7 @@
     "grunt-mocha-test": "~0.11.0",
     "grunt-push-release": "^0.1.1",
     "grunt-readme": "^0.4.5",
+    "grunt-saucelabs": "^8.3.1",
     "lodash": "latest",
     "orchestrate": "~0.3.4",
     "testem": "^0.6.18"
