--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-push-release": "^0.1.1",
     "grunt-readme": "^0.4.5",
     "grunt-saucelabs": "^8.3.1",
+    "dox": "latest",
     "lodash": "latest",
     "orchestrate": "~0.3.4",
     "testem": "^0.6.18"
