--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "name": "ramda",
-  "description": "A practical functional library for Javascript programmers.",
+  "description": "A practical functional library for JavaScript programmers.",
   "version": "0.5.0",
   "homepage": "https://www.github.com/CrossEye/ramda",
   "license": "MIT",
