--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "CrossEye <scott@sauyet.com> (scott.sauyet.com)",
+  "author": "Scott Sauyet <scott@sauyet.com> (scott.sauyet.com)",
   "contributors": [
     {
       "name": "buzzdecafe",
@@ -10,16 +10,21 @@
       "name": "Scott Sauyet",
       "email": "scott@sauyet.com",
       "web": "http://fr.umio.us"
+    },
+    {
+      "name": "David Chambers",
+      "email": "dc@davidchambers.me",
+      "web": "http://davidchambers.me"
     }
   ],
   "name": "ramda",
   "description": "A practical functional library for JavaScript programmers.",
   "version": "0.6.0",
-  "homepage": "https://www.github.com/CrossEye/ramda",
+  "homepage": "https://www.github.com/ramda/ramda",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/CrossEye/ramda.git"
+    "url": "git://github.com/ramda/ramda.git"
   },
   "main": "ramda.js",
   "scripts": {
