--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "ramda",
   "main": "ramda.js",
   "version": "0.6.0",
-  "homepage": "https://github.com/CrossEye/ramda",
+  "homepage": "https://github.com/ramda/ramda",
   "authors": [
     "(Scott Sauyet <scott@sauyet.com>)",
     "(buzzdecafe <mh@buzzdecafe.com>)"
