speed up difference, use real name in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Scott Sauyet <scott@sauyet.com> (scott.sauyet.com)",
   "contributors": [
     {
-      "name": "buzzdecafe",
+      "name": "Michael Hurley",
       "email": "mh@buzzdecafe.com",
       "web": "http://buzzdecafe.com"
     },
