--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "escodegen": "1.4.x",
     "grunt": "~0.4.5",
     "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
+    "grunt-browserify": "3.2.1",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jshint": "~0.10.0",
