--- a/scripts/build
+++ b/scripts/build
@@ -27,11 +27,7 @@ var $pathEq = R.curry(function(path, expected, obj) {
 });
 
 //  filenameToIdentifier :: String -> String
-var filenameToIdentifier =
-    R.pipe(R.split(path.sep),
-           R.last,
-           R.split('.'),
-           R.head);
+var filenameToIdentifier = R.rPartial(path.basename, '.js');
 
 //  identifierToFilename :: String -> String
 var identifierToFilename =
