--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-docco": "latest",
-    "grunt-jscs": "~0.7.0",
+    "grunt-jscs": "1.0.x",
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
     "grunt-saucelabs": "^8.3.1",
