--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-docco": "latest",
     "grunt-jscs": "1.0.x",
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
     "grunt-saucelabs": "^8.3.1",
+    "js-yaml": "^3.2.5",
     "lodash": "latest",
     "orchestrate": "~0.3.4",
     "q": "^1.1.1",
