Beginning to parse out jsdocs

--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
     "grunt-saucelabs": "^8.3.1",
+    "highlight.js": "^8.4.0",
     "js-yaml": "^3.2.5",
     "lodash": "latest",
+    "marked": "^0.3.2",
     "orchestrate": "~0.3.4",
     "q": "^1.1.1",
     "testem": "^0.6.18",
