--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
     "grunt-saucelabs": "^8.3.1",
+    "handlebars": "^2.0.0",
     "highlight.js": "^8.4.0",
     "js-yaml": "^3.2.5",
     "lodash": "latest",
