--- a/package.json
+++ b/package.json
@@ -45,15 +45,19 @@
     "dox": "latest",
     "envvar": "1.x.x",
     "escodegen": "1.4.x",
+    "gh-pages": "^0.2.0",
     "grunt": "~0.4.5",
     "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
     "grunt-browserify": "3.2.1",
     "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-docco": "latest",
     "grunt-jscs": "1.0.x",
+    "grunt-jsdoc": "^0.6.1",
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
     "grunt-saucelabs": "^8.3.1",
