--- a/scripts/build
+++ b/scripts/build
@@ -30,7 +30,7 @@ var filenameToIdentifier = R.rPartial(path.basename, '.js');
 
 //  identifierToFilename :: String -> String
 var identifierToFilename =
-    R.pipe(R.ifElse(RegExp.prototype.test.bind(/^(?!__$)_/),
+    R.pipe(R.ifElse(RegExp.prototype.test.bind(/^_/),
                     R.lPartial(path.join, __dirname, '..', 'src', 'internal'),
                     R.lPartial(path.join, __dirname, '..', 'src')),
            R.rPartial(R.concat, '.js'));
