Added grunt-contrib-watch, grunt-express, grunt-open.

--- a/package.json
+++ b/package.json
@@ -55,11 +55,14 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-docco": "latest",
+    "grunt-express": "^1.4.1",
     "grunt-jscs": "1.2.x",
     "grunt-jsdoc": "^0.6.1",
     "grunt-mocha": "~0.4.11",
     "grunt-mocha-test": "~0.11.0",
+    "grunt-open": "^0.2.3",
     "grunt-saucelabs": "^8.3.1",
     "handlebars": "^2.0.0",
     "highlight.js": "^8.4.0",
