--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,24 @@
 /bench/
+/bower_components/
+/dist/gh-pages/
 /docs/
+/jsdoc-template/
+/less/
 /sauce/
 /scripts/
+/tasks/
 **/test/
 /.editorconfig
+/.gitattributes
 /.npmignore
 /.travis.yml
 /.jscsrc
 /.jshintrc
+/CONTRIBUTING.md
 /Gruntfile.js
 /Makefile
 /bower.json
 /npm-debug.log
 /ramda.js.tmp
+/template.js
 /testem.json
