--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /lib/bench/report/
 /lib/docs/public/
 /node_modules/
+/index.js
 /npm-debug.log
 /ramda.js.tmp
 /test/bundle.js
+/tmp
 /bower_components/
 /dist/gh-pages/
