--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,10 @@
 {
   "evil": true,
   "eqnull": true,
+  "globals": {
+    "Symbol": true
+  },
+  "newcap": false,
   "predef": ["beforeEach", "console", "define", "describe", "it", "module", "process", "require"],
   "undef": true,
   "unused": true
