--- a/.jscsrc
+++ b/.jscsrc
@@ -28,5 +28,6 @@
   "requireSpaceBetweenArguments": true,
   "requireSpacesInConditionalExpression": true,
   "requireSpacesInFunction": {"beforeOpeningCurlyBrace": true},
+  "validateIndentation": 4,
   "validateQuoteMarks": {"escape": true, "mark": "'"}
 }
