--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ramda": "0.11.0",
     "testem": "^0.6.18",
     "uglify-js": "2.4.x",
-    "xyz": "0.5.x"
+    "xyz": "0.5.x",
+    "iterdone": "~0.1.0"
   }
 }
