--- a/package.json
+++ b/package.json
@@ -33,45 +33,46 @@
   },
   "main": "dist/ramda.js",
   "scripts": {
-    "jshint": "grunt jshint",
-    "test": "grunt jshint && grunt jscs && grunt browserify:client && grunt mochaTest:unit"
+    "browserify": "node_modules/browserify/bin/cmd.js test/*.js --outfile lib/test/bundle.js",
+    "clean": "rimraf dist",
+    "jscs": "jscs scripts/build **/*.js",
+    "jshint": "jshint scripts/build **/*.js",
+    "pretest": "npm run jshint && npm run jscs",
+    "test": "node scripts/testfiles | node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {},
   "devDependencies": {
     "acorn": "0.9.x",
     "benchmark": "~1.0.0",
+    "browserify": "10.x.x",
     "commander": "2.5.x",
     "dox": "latest",
     "envvar": "1.x.x",
     "escodegen": "1.4.x",
     "gh-pages": "^0.2.0",
     "grunt": "~0.4.5",
-    "grunt-benchmark": "https://github.com/buzzdecafe/grunt-benchmark/archive/09999a8c3fbfff04a1695846c1ccd0bd8a0ef5ab.tar.gz",
-    "grunt-browserify": "3.2.1",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-docco": "latest",
     "grunt-express": "^1.4.1",
-    "grunt-jscs": "1.5.x",
     "grunt-jsdoc": "^0.6.1",
-    "grunt-mocha": "~0.4.11",
-    "grunt-mocha-test": "~0.11.0",
     "grunt-open": "^0.2.3",
-    "grunt-saucelabs": "^8.3.1",
     "handlebars": "^2.0.0",
     "highlight.js": "^8.4.0",
     "js-yaml": "^3.2.5",
+    "jscs": "1.13.x",
+    "jshint": "2.7.x",
     "lodash": "latest",
     "marked": "^0.3.2",
     "mocha": "2.x.x",
     "orchestrate": "~0.3.4",
     "q": "^1.1.1",
     "ramda": "0.13.0",
+    "rimraf": "~2.3.2",
     "testem": "^0.6.18",
     "uglify-js": "2.4.x",
     "xyz": "0.5.x"
