lint: allow unused parameters

--- a/.jshintrc
+++ b/.jshintrc
@@ -7,5 +7,5 @@
   "newcap": false,
   "predef": ["beforeEach", "console", "define", "describe", "it", "module", "process", "require"],
   "undef": true,
-  "unused": true
+  "unused": "vars"
 }
