npm run build, updated build instructions in README.md

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bench": "scripts/benchRunner",
     "browserify": "node_modules/browserify/bin/cmd.js test/*.js --outfile lib/test/bundle.js",
     "bookmarklet": "scripts/bookmarklet",
+    "build": "make && make dist/ramda.min.js",
     "clean": "rimraf dist",
     "jscs": "jscs scripts/bookmarklet scripts/build **/*.js **/**/*.js",
     "jshint": "jshint scripts/bookmarklet scripts/build **/*.js **/**/*.js",
