--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js:
 - '0.10'
 - '0.12'
 - 'iojs-v1.5.1'
-before_script:
-- make clean && make dist/ramda.js
+script:
+- npm test
+- npm run testem
