fix R.commute and R.commuteMap

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "q": "^1.1.1",
     "ramda": "0.17.x",
     "rimraf": "~2.3.2",
+    "sanctuary": "0.7.x",
     "testem": "^0.6.18",
     "uglify-js": "2.4.x",
     "xyz": "0.5.x"
