Include browser tests in the build again
- Removes redundant build scripts
- Generates test bundle for browser using browserify
- Refactor `clone` implementation to use `valueOf` for `Date` objects to address issue in Firefox (~version 35)
- Refactor `_equals` for `Error` instances to no longer compare properties other than `name` and `message`
  - Safari's `Error` has `line` and `column` properties which will rarely be equal unless they're identical
- Refactor `keys` to workaround Safari bug with enumerable `length` prop on `arguments` objects
- Refactor `times` to ensure `n` is a non-negative number (fixes PhantomJS bug)
- Bumps version of testem to v0.9

--- a/package.json
+++ b/package.json
@@ -34,14 +34,16 @@
   "main": "dist/ramda.js",
   "scripts": {
     "bench": "scripts/benchRunner",
-    "browserify": "node_modules/browserify/bin/cmd.js test/*.js --outfile lib/test/bundle.js",
     "bookmarklet": "scripts/bookmarklet",
     "build": "make && make dist/ramda.min.js",
     "clean": "rimraf dist/*",
     "lint": "eslint scripts/bookmarklet scripts/build src/*.js src/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "pretest": "npm install && npm run lint && npm run clean && npm run build",
     "test": "node scripts/testfiles | node_modules/.bin/mocha --reporter spec",
-    "posttest": "git checkout -- dist"
+    "posttest": "git checkout -- dist",
+    "prebrowser_test": "npm run pretest",
+    "browser_test": "testem ci",
+    "postbrowser_test": "npm run posttest"
   },
   "dependencies": {},
   "devDependencies": {
@@ -61,7 +63,7 @@
     "ramda": "0.17.x",
     "rimraf": "~2.3.2",
     "sanctuary": "0.7.x",
-    "testem": "^0.6.18",
+    "testem": "0.9.x",
     "uglify-js": "2.4.x",
     "xyz": "0.5.x"
   }
