--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "bookmarklet": "scripts/bookmarklet",
     "build": "make && make dist/ramda.min.js",
     "clean": "rimraf dist/*",
-    "jscs": "jscs scripts/bookmarklet scripts/build **/*.js **/**/*.js",
-    "jshint": "jshint scripts/bookmarklet scripts/build **/*.js **/**/*.js",
-    "pretest": "npm install && npm run jshint && npm run jscs && npm run clean && npm run build",
+    "lint": "eslint scripts/bookmarklet scripts/build src/*.js src/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
+    "pretest": "npm install && npm run lint && npm run clean && npm run build",
     "test": "node scripts/testfiles | node_modules/.bin/mocha --reporter spec",
     "posttest": "git checkout -- dist"
   },
@@ -54,10 +53,9 @@
     "dox": "latest",
     "envvar": "1.x.x",
     "escodegen": "1.4.x",
+    "eslint": "^1.10.1",
     "handlebars": "3.0.x",
     "js-yaml": "^3.2.5",
-    "jscs": "1.13.x",
-    "jshint": "2.7.x",
     "mocha": "2.x.x",
     "q": "^1.1.1",
     "ramda": "0.17.x",
