--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^1.10.1",
     "handlebars": "3.0.x",
     "js-yaml": "^3.2.5",
+    "jsverify": "^0.7.1",
     "mocha": "2.x.x",
     "q": "^1.1.1",
     "ramda": "0.17.x",
