Add coverage npm script via istanbul
Add istanbul for test coverage reporting.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "bench": "scripts/benchRunner",
     "bookmarklet": "scripts/bookmarklet",
     "build": "make && make dist/ramda.min.js",
-    "clean": "rimraf dist/*",
+    "clean": "rimraf dist/* coverage/*",
+    "precoverage": "npm run pretest",
+    "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
+    "postcoverage": "npm run posttest",
     "lint": "eslint scripts/bookmarklet scripts/build src/*.js src/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "pretest": "npm install && npm run lint && npm run clean && npm run build",
     "test": "mocha --reporter spec",
@@ -57,6 +60,7 @@
     "escodegen": "1.4.x",
     "eslint": "^1.10.1",
     "handlebars": "3.0.x",
+    "istanbul": "^0.4.x",
     "js-yaml": "^3.2.5",
     "mocha": "2.x.x",
     "q": "^1.1.1",
