--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ramda": "0.17.x",
     "rimraf": "~2.3.2",
     "sanctuary": "0.7.x",
+    "sinon": "^1.17.4",
     "testem": "0.9.x",
     "uglify-js": "2.4.x",
     "xyz": "0.5.x"
