optional type checking

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "browser_test": "testem ci",
     "postbrowser_test": "npm run posttest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sanctuary-def": "0.6.x"
+  },
   "devDependencies": {
     "acorn": "0.9.x",
     "benchmark": "~1.0.0",
