--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "acorn": "0.9.x",
     "benchmark": "~1.0.0",
     "browserify": "10.x.x",
+    "chokidar": "1.6.1",
     "cli-table": "0.3.x",
     "commander": "2.5.x",
     "dox": "latest",
